add whats app numbers

--- a/src/app/pages/home/about-nutri/about-nutri.component.html
+++ b/src/app/pages/home/about-nutri/about-nutri.component.html
@@ -14,18 +14,142 @@
         </div>
     </nav>
 
-    <section>
+    <section class="about-firstsec">
         <div class="container">
-            <div class="row text-center">
-                <div class="col-12">
-                    <h4>About Us</h4>
-                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem magni, consectetur ipsam aliquam exercitationem, sequi vel ad deserunt laudantium reiciendis amet voluptas nihil voluptates atque!</p> -->
-                    <p>With an intent to serve the highest quality of cloths and footwear, Geonix was started in 2021. We, at Geonix aspire and promise ourselves to take care that the products served to our customers are in purest form and we can take pride in declaring that we have been quite successful in fulfilling that aspiration and delivering that promise. “Product Quality and customers’ faith” is our sole motto. Geonix was started amid the pandemic times and very closely seeing the chaos and havoc wrecked by the COVID pandemic, we took an oath that come what may the quality of our products would never be compromised and the faith bestowed upon us by our customers would never be broken.
-                    </p>
-                  
+            <div class="row">
+                <div class="col-sm-6">
+                    <img src="/assets/images/about/Untitled-2.gif" class="img-fluid">
+                </div>
+                <div class="col-sm-6">
+                    <div class="row align-items-center">
+                        <div class="col-3 text-center">
+                            <h1>09</h1>
+                        </div>
+                        <div class="col-9 experience">
+                            <img src="/assets/images/about/confetti.png" class="img-fluid">
+                            <P>YEARS
+                                WORKING EXPERIENCE</P>
+                        </div>
+                    </div>
+                    <h3>Geonix is a brand name born from the fusion of two powerful symbols: geography and phoenix.</h3>
+                    <p>The first part of the name, "geo," comes from the Greek word for earth, and represents the global reach and impact of the brand. Geonix envisions a world where everyone is connected and empowered by technology, no matter where they are located.</p>
+                    <P>The second part of the name, "nix," is derived from the mythical bird known as the phoenix. In ancient mythology, the phoenix was a symbol of renewal, rebirth, and resilience. It was said to be reborn from its own ashes, rising stronger and more beautiful each time.</P>
+                    <p>Together, "geonix" represents a brand that is global, innovative, and resilient. It embodies the idea that technology can connect people across the world and empower them to achieve great things.</p>
+                    <button class="btn black-button">Contact Us</button>
                 </div>
             </div>
         </div>
     </section>
 
+    <div class="properties">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2 col-sm-4">
+                    <div class="properties-main text-center">
+                        <img src="/assets/images/about/collaborate.png" class="img-fluid">
+                        <p>Integration</p>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-sm-4">
+                    <div class="properties-main text-center">
+                        <img src="/assets/images/about/cpu (2).png" class="img-fluid">
+                        <p>Technology</p>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-sm-4">
+                    <div class="properties-main text-center">
+                        <img src="/assets/images/about/web-design.png" class="img-fluid">
+                        <p>Design</p>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-sm-4">
+                    <div class="properties-main text-center">
+                        <img src="/assets/images/about/shipped.png" class="img-fluid">
+                        <p>Fast Shipping</p>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-sm-4">
+                    <div class="properties-main text-center">
+                        <img src="/assets/images/about/idea.png" class="img-fluid">
+                        <p>Problem solving</p>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-sm-4">
+                    <div class="properties-main text-center">
+                        <img src="/assets/images/about/policy.png" class="img-fluid">
+                        <p>Policy</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <section class="about-firstsec">
+        <div class="container">
+            <div class="row align-items-center pb-4">
+                <div class="col-sm-6">
+                    <p>Geonix's story is one of transformation and evolution. The brand was born out of a passion for technology and a belief in the power of innovation to change the world. From humble beginnings, Geonix has grown into a leading provider of IT hardware products, serving customers around the globe.</p>
+                    <P>Geonix's commitment to quality, reliability, and customer service is reflected in every product they sell. Whether it's a laptop, a server, or a network switch, Geonix products are designed to meet the highest standards of performance and durability.</P>
+                    <p>At the heart of Geonix's success is a team of dedicated professionals who are passionate about technology and committed to delivering the best possible products and services to their customers. They are driven by a shared vision of a world where technology is a force for good, connecting people and creating new opportunities for growth and development.</p>
+                    <p>As Geonix continues to evolve and expand, they remain true to their core values of innovation, quality, and customer service. They are a brand that customers can trust, rely on, and believe in.</p>
+                </div>
+                <div class="col-sm-6">
+                    <img src="/assets/images/about/one.jpg" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="responsible">
+        <div class="container">
+            <h2 class="text-center">Responsible and sustainable development</h2>
+            <div class="row justify-content-center">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="responsible-main">
+                        <h3>Our Vision</h3>
+                        <dl>
+                            <dd>- Good Service</dd>
+                            <dd>- For Community</dd>
+                            <dd>- Long Term Development</dd>
+                            <dd>- Save Our Planet</dd>
+                            <dd>- Help People</dd>
+                        </dl>
+                        <div class="icon">
+                            <img src="/assets/images/about/eye.png" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="responsible-main">
+                        <h3>Our Mision</h3>
+                        <dl>
+                            <dd>- Change The Habits</dd>
+                            <dd>- Best Quality</dd>
+                            <dd>- Think Big Do Bigger</dd>
+                            <dd>- Stability & competence</dd>
+                            <dd>- Safer & Better Life</dd>
+                        </dl>
+                        <div class="icon">
+                            <img src="/assets/images/about/career.png" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="responsible-main">
+                        <h3>Our Promise</h3>
+                        <dl>
+                            <dd>- Sustainable Relationship</dd>
+                            <dd>- Renew Commitment</dd>
+                            <dd>- Provide The Best Solution</dd>
+                            <dd>- Profitable Relationship</dd>
+                            <dd>- Adapt With People's Needs</dd>
+                        </dl>
+                        <div class="icon">
+                            <img src="/assets/images/about/pinky-promise.png" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
