--- a/src/app/pages/home/index/index.component.html
+++ b/src/app/pages/home/index/index.component.html
@@ -79,9 +79,9 @@
     <div class="second-section container position-relative">
         <div class="row">
             <div class="col-sm-6 mb-2" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 1,'page':1}">
-               <div class="product-image one">
+                <div class="product-image one">
 
-               </div>
+                </div>
             </div>
             <div class="col-sm-6 mb-2" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 6,'page':1}">
                 <div class="product-image two">
@@ -105,7 +105,7 @@
             <div class="extra">
                 <h4>LATEST COLLECTION</h4>
                 <h3>SAVE <span> UP TO 50% </span></h3>
-                <button class="btn" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 12,'page':1}">View More</button>
+                <a class="btn" href="#Recommendadion">View More</a>
             </div>
         </div>
     </div>
@@ -363,5 +363,35 @@
             </div>
         </a>
     </owl-carousel>
+
+    <!-- <div class="whatsappmenu">
+        <img src="./assets/images/whatsapp-icon.jpg" class="img-fluid">
+        <ul>
+            <li class="icon-one">
+                <div>
+                    <a href="https://wa.me/8920896230"> 8920896230</a>
+                    <i class="fa-solid fa-arrow-left"></i> 
+                    For customer query
+                    <i class="fa-solid fa-mobile-screen-button"></i>  
+                </div>
+            </li>
+            <li class="icon-two">
+                <div>
+                    <a href="https://wa.me/7011788604"> 7011788604</a>
+                    <i class="fa-solid fa-arrow-left"></i>
+                    For Service query
+                    <i class="fa-solid fa-mobile-screen-button"></i>   
+                </div>
+            </li>
+            <li class="icon-three">
+                <div>
+                    <a href="https://wa.me/9310611766"> 9310611766</a>
+                    <i class="fa-solid fa-arrow-left"></i>
+                    For B2B sales query
+                    <i class="fa-solid fa-mobile-screen-button"></i> 
+                </div>
+            </li>
+        </ul>
+    </div> -->
 
 </main>
