--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,36 @@
 
 <molla-mobile-menu></molla-mobile-menu>
 
+<div class="whatsappmenu">
+    <img src="./assets/images/whatsapp.png" class="img-fluid">
+    <ul>
+        <li class="icon-one">
+            <div>
+                <a href="https://wa.me/918920896230"> 8920896230</a>
+                <i class="fa-solid fa-arrow-left"></i> 
+                For Customer Query
+                <i class="fa-solid fa-mobile-screen-button"></i>  
+            </div>
+        </li>
+        <li class="icon-two">
+            <div>
+                <a href="https://wa.me/9310611766"> 9310611766</a>
+                <i class="fa-solid fa-arrow-left"></i>
+                For Service Query
+                <i class="fa-solid fa-mobile-screen-button"></i>   
+            </div>
+        </li>
+        <!-- <li class="icon-three">
+            <div>
+                <a href="https://wa.me/7011788604"> 7011788604</a>
+                <i class="fa-solid fa-arrow-left"></i>
+                For B2B sales query
+                <i class="fa-solid fa-mobile-screen-button"></i> 
+            </div>
+        </li> -->
+    </ul>
+</div>
+
 <button id="scroll-top" title="Back to Top" [ngClass]="{show: utilsService.isSticky}"
     (click)="utilsService.scrollTop($event)"><i class="icon-arrow-up"></i></button>
 
