--- a/src/app/pages/home/index/carousel-basic/carousel-basic.component.scss
+++ b/src/app/pages/home/index/carousel-basic/carousel-basic.component.scss
@@ -157,7 +157,7 @@
         .homeslider-main {
             align-items: flex-start !important;
             padding-top: 6vw;
-            min-height: 700px;
+            min-height: 125vw;
             box-shadow: inset 0 700px #0000003d;            
 
             h3.smart {
