--- a/src/app/pages/home/index/index.component.html
+++ b/src/app/pages/home/index/index.component.html
@@ -290,6 +290,92 @@
     <div class="mb-5"></div>
 
     <molla-recommend-collection [products]="products" [loaded]="loaded" *ngIf="products"></molla-recommend-collection>
+    
+    <!-- <div class="last-sec">
+        <div class="container">
+            <div class="row">
+                <div class="col pe-0">
+                    <div class="last-sec-div">
+                        <div class="video-div">
+                            <video width="100%" height="auto" onloadedmetadata="this.muted=true" autoplay loop>
+                                <source src="./assets/images/video8.mp4" type="video/mp4">
+                            </video>
+                            <div class="new-launch">
+                                <img src="./assets/images/party-popper.png" class="img-fluid">
+                                <span>NEW LAUNCH</span>
+                            </div>
+                        </div>
+                        <div class="ptoduct-image">
+                            <img src="./assets/images/pcategory/sata.png" class="img-fluid">
+                        </div>
+                        <div class="product-info text-center">
+                            <h5 class="text-center">SSD Sata</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col pe-2">
+                    <div class="last-sec-div">
+                        <div class="video-div">
+                            <video width="100%" height="auto" onloadedmetadata="this.muted=true" autoplay loop>
+                                <source src="./assets/images/video2.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <div class="ptoduct-image">
+                            <img src="./assets/images/pcategory/m.2 ssd.png" class="img-fluid">
+                        </div>
+                        <div class="product-info text-center">
+                            <h5 class="text-center">SSD M.2</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col pe-0">
+                    <div class="last-sec-div">
+                        <div class="video-div">
+                            <video width="100%" height="auto" onloadedmetadata="this.muted=true" autoplay loop>
+                                <source src="/assets/images/video3.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <div class="ptoduct-image">
+                            <img src="/assets/images/H510.png" class="img-fluid">
+                        </div>
+                        <div class="product-info text-center">
+                            <h5 class="text-center">Motherboard</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col pe-2">
+                    <div class="last-sec-div">
+                        <div class="video-div">
+                            <video width="100%" height="auto" onloadedmetadata="this.muted=true" autoplay loop muted>
+                                <source src="./assets/images/video7.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <div class="ptoduct-image">
+                            <img src="./assets/images/pcategory/pc monitor.png" class="img-fluid">
+                        </div>
+                        <div class="product-info text-center">
+                            <h5 class="text-center">Monitor</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col pe-0">
+                    <div class="last-sec-div">
+                        <div class="video-div">
+                            <video width="100%" height="auto" onloadedmetadata="this.muted=true" autoplay loop muted>
+                                <source src="./assets/images/video6.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <div class="ptoduct-image">
+                            <img src="./assets/images/pcategory/desktophdd.png" class="img-fluid">
+                        </div>
+                        <div class="product-info text-center">
+                            <h5 class="text-center">HDD</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
 
     <div class="mb-3"></div>
 
