--- a/src/app/pages/home/index/index.component.scss
+++ b/src/app/pages/home/index/index.component.scss
@@ -1170,7 +1170,7 @@ a{
 }
 
 .three {
-    background-image: url('/assets/images/banner1-3.png');
+    background-image: url('/assets/images/banner1-5.png');
 }
 
 .four {
@@ -1228,112 +1228,83 @@ a{
     }
 }
 
-// .whatsappmenu {
-//     position: fixed;
-//     max-width: 50px;
-//     padding: 5px;
-//     background-color: lightgrey;
-//     right: 0px;
-//     bottom: 30%;
-//     cursor: pointer;
-//     z-index: 10;
+.last-sec {
+    .last-sec-div {
+        border: 1px solid lightgray;
+        border-radius: 5px;
+        overflow: hidden;
 
-//     ul {
-//         margin: 0;
+        .video-div {
+            display: flex;
+            justify-content: center;
+            align-items: center;
 
-//         li {
+            .new-launch {
+                position: absolute;
+                display: flex;
+                max-height: 20px;
+                background-color: #3265bc;
+                top: 10px;
+                align-items: center;
+                padding: 10px;
+                color: white;
+                left: 11px;
+                border-top-right-radius: 5px;
+                border-bottom-right-radius: 5px;
 
-//             a {
-//                 color: white;
-//             }
-//         }
-//     }
+                img {
+                    max-width: 20px;
+                }
+            }
 
-//     div {
-//         min-width: 300px;
-//         text-align: left;
-//         font-style: italic;
-//     }
+            // .new-launch:after {
+            //     content: '';
+            //     width: 20px;
+            //     height: 20px;
+            //     background-color: #053e9e;
+            //     position: absolute;
+            //     left: 0;
+            //     transform: skewY(25deg);
+            //     z-index: -2;
+            //     top: 7px;
+            // }
+        }
 
-//     li.icon-one {
-//         position: absolute;
-//         top: 0;
-//         display: block;
-//         color: white;
-//         background-color: #5c6190;
-//         text-align: center;
-//         border-radius: 40px;
-//         width: 40px;
-//         height: 40px;
-//         overflow: hidden;
-//         display: flex;
-//         align-items: center;
-//         padding: 10px 10px 10px 14px;
-//         opacity: 0;
-//         min-height: 40px;
-//         transition: all 0.5s, width 1.5s;
-//         right: 0;
-//     }
+        .ptoduct-image {
+            width: 65px;
+            height: 65px;
+            background-color: #ededed;
+            padding: 10px;
+            border-radius: 50%;
+            border: 1px solid #d3d3d3;
+            position: absolute;
+            bottom: 60px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-//     li.icon-two {
-//         position: absolute;
-//         top: 0;
-//         display: block;
-//         color: white;
-//         background-color: #5c6190;
-//         text-align: center;
-//         border-radius: 40px;
-//         width: 40px;
-//         height: 40px;
-//         overflow: hidden;
-//         display: flex;
-//         align-items: center;
-//         padding: 10px 10px 10px 14px;
-//         opacity: 0;
-//         min-height: 40px;
-//         transition: all 1s, width 1.5s;
-//         right: 0;
-//     }
+        .product-info {
+            padding-top: 40px;
+            padding-bottom: 10px;
 
-//     li.icon-three {
-//         position: absolute;
-//         top: 0;
-//         display: block;
-//         color: white;
-//         background-color: #5c6190;
-//         text-align: center;
-//         border-radius: 40px;
-//         width: 40px;
-//         height: 40px;
-//         overflow: hidden;
-//         display: flex;
-//         align-items: center;
-//         padding: 10px 10px 10px 14px;
-//         opacity: 0;
-//         min-height: 40px;
-//         transition: all 1.5s, width 1.5s;
-//         right: 0;
-//     }
+            .price {
+                font-weight: 600;
+            }
 
-//     li i {
-//         padding-left: 10px;
-//     }
-// }
+            .off {
+                color: #0E2C5E;
+            }
 
-// .whatsappmenu:hover li.icon-one {
-//     opacity: 1;
-//     top: -100px;
-//     width: 300px;
-// }
+            .second-price {
+                text-decoration: line-through;
+            }
 
-// .whatsappmenu:hover li.icon-two {
-//     opacity: 1;
-//     top: -50px;
-//     width: 300px;
-// }
-
-// .whatsappmenu:hover li.icon-three {
-//     opacity: 1;
-//     top: -150px;
-//     width: 300px;
-// }
+            i {
+                color: #0E2C5E;
+            }
+        }
+    }
+}
