--- a/src/app/pages/home/index/modal-basic/modal-basic.component.html
+++ b/src/app/pages/home/index/modal-basic/modal-basic.component.html
@@ -7,6 +7,7 @@
 				<div class="bodymain-div">
 					<img src="assets/images/popup.jpeg" class="img-fluid">
 				</div>
+				<!-- <h1>{{newval}}</h1> -->
 			</div>
 	</ng-template>
 	<!-- <button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button> -->
