--- a/src/app/pages/home/terms/terms.component.html
+++ b/src/app/pages/home/terms/terms.component.html
@@ -47,31 +47,31 @@
                         <tbody style="text-align: center; font-size: 14px;">
                           <tr>
                             <th scope="row">Motherboard</th>
-                            <td>1 Year</td>
+                            <td>3 Year</td>
                           </tr>
                           <tr>
                             <th scope="row">RAM/Memory</th>
-                            <td>3 Years</td>
-                          </tr>
-                          <tr>
-                            <th scope="row">CPU Fan</th>
-                            <td>1 Year</td>
+                            <td>5 Years</td>
                           </tr>
                           <tr>
                             <th scope="row">Solid State Drive (SSD)</th>
-                            <td>3 Years</td>
+                            <td>5 Years</td>
                           </tr>
                           <tr>
-                            <th scope="row">Keyboard Mouse</th>
-                            <td>1 Year</td>
+                            <th scope="row">Graphic Card</th>
+                            <td>3 Year</td>
                           </tr>
                           <tr>
-                            <th scope="row">LED/LCD Screen</th>
-                            <td>1 Year</td>
+                            <th scope="row">SMPS</th>
+                            <td>3 Year</td>
                           </tr>
                           <tr>
-                            <th scope="row">DVD RW</th>
-                            <td>1 Year</td>
+                            <th scope="row">Desktop & Laptop HDD</th>
+                            <td>2 Year</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">Monitor / TFT</th>
+                            <td>2 Year</td>
                           </tr>
                         </tbody>
                       </table>
